# vivatechagent

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
src/: main.rs  models.rs  tools.rs
